log
Tue 23 Apr 2024 08:56:26 PM UTC: 
 tests:  0|6
total_score: 0/70
334fb6b
Tue 23 Apr 2024 08:57:07 PM UTC: 
 hashmap.c | 17 ++++++++++++++---
 1 file changed, 14 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 0/70
2bd317e
Tue 23 Apr 2024 08:59:50 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8383692
Tue 23 Apr 2024 09:08:25 PM UTC: 
 hashmap.c | 18 ++++++++++++------
 1 file changed, 12 insertions(+), 6 deletions(-)
 tests:  2|5
total_score: 10/70
5eac39e
Tue 23 Apr 2024 09:09:08 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 10/70
069883c
Tue 23 Apr 2024 09:15:02 PM UTC: 
 hashmap.c | 24 +++++++++++++++++++++---
 1 file changed, 21 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c:105:22: error: ‘key’ undeclared here (not in a function); did you mean ‘key_t’?
  105 | long posicion = hash(key, map->capacity);
      |                      ^~~
      |                      key_t
hashmap.c:105:27: error: ‘map’ undeclared here (not in a function)
  105 | long posicion = hash(key, map->capacity);
      |                           ^~~
hashmap.c:107:1: error: expected identifier or ‘(’ before ‘if’
  107 | if (map->buckets[posicion] == NULL)
      | ^~
hashmap.c:112:1: error: expected identifier or ‘(’ before ‘else’
  112 | else
      | ^~~~
Compilation failed
c60688d
Tue 23 Apr 2024 09:15:11 PM UTC: 
 hashmap.c | 12 ------------
 1 file changed, 12 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:86:9: error: ‘dato’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   86 |   Pair *dato;
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
f01425b
Tue 23 Apr 2024 09:16:48 PM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c:105:22: error: ‘key’ undeclared here (not in a function); did you mean ‘key_t’?
  105 | long posicion = hash(key, map->capacity);
      |                      ^~~
      |                      key_t
hashmap.c:105:27: error: ‘map’ undeclared here (not in a function)
  105 | long posicion = hash(key, map->capacity);
      |                           ^~~
hashmap.c:107:1: error: expected identifier or ‘(’ before ‘if’
  107 | if (map->buckets[posicion] == NULL)
      | ^~
hashmap.c:112:1: error: expected identifier or ‘(’ before ‘else’
  112 | else
      | ^~~~
Compilation failed
f69aacd
Tue 23 Apr 2024 09:16:54 PM UTC: 
 hashmap.c | 11 -----------
 1 file changed, 11 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:86:9: error: ‘dato’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   86 |   Pair *dato;
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
4cfbdef
Tue 23 Apr 2024 09:17:33 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 10/70
22652f4
Tue 23 Apr 2024 09:17:57 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
8b2a0cf
Tue 23 Apr 2024 09:42:04 PM UTC: 
 hashmap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 10/70
f247f19
Tue 23 Apr 2024 09:44:21 PM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:87:9: error: variable ‘dato’ set but not used [-Werror=unused-but-set-variable]
   87 |   Pair *dato = NULL;
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
680a93e
Tue 23 Apr 2024 09:45:40 PM UTC: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 10/70
4fcde53
Tue 23 Apr 2024 09:46:27 PM UTC: 
 hashmap.c | 17 ++++++-----------
 1 file changed, 6 insertions(+), 11 deletions(-)
 tests:  2|5
total_score: 10/70
11be4a4
Tue 23 Apr 2024 09:47:27 PM UTC: 
 hashmap.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  2|5
total_score: 10/70
ba06434
Tue 23 Apr 2024 09:55:41 PM UTC: 
 hashmap.c | 23 ++++++++++++++---------
 1 file changed, 14 insertions(+), 9 deletions(-)
 tests:  2|5
total_score: 10/70
8077c7e
Tue 23 Apr 2024 10:00:02 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 10/70
86ca98d
Tue 23 Apr 2024 10:08:37 PM UTC: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
a8044a6
Tue 23 Apr 2024 10:58:25 PM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  4|5
total_score: 20/70
88f0938
Tue 23 Apr 2024 10:59:04 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
b2f1c42
Tue 23 Apr 2024 11:36:34 PM UTC: 
 hashmap.c | 25 ++++++++++++++++++-------
 1 file changed, 18 insertions(+), 7 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:107:3: error: expected expression before ‘}’ token
  107 |   }
      |   ^
hashmap.c:103:8: error: unused variable ‘posicion’ [-Werror=unused-variable]
  103 |   long posicion = hash(key, map->capacity);
      |        ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0431f04
Tue 23 Apr 2024 11:37:56 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:108:3: error: expected expression before ‘}’ token
  108 |   }
      |   ^
hashmap.c:104:8: error: unused variable ‘posicion’ [-Werror=unused-variable]
  104 |   long posicion = hash(key, map->capacity);
      |        ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
625a732
Tue 23 Apr 2024 11:38:16 PM UTC: 
 hashmap.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  0|0
66b77e8
Wed 24 Apr 2024 12:35:31 AM UTC: 
 hashmap.c | 25 ++++++++++++++++++-------
 1 file changed, 18 insertions(+), 7 deletions(-)
 tests:  2|5
total_score: 20/70
9ba9d6c
Wed 24 Apr 2024 12:36:59 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 20/70
5040864
Wed 24 Apr 2024 12:38:23 AM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  3|5
total_score: 20/70
4a5f042
Wed 24 Apr 2024 12:41:56 AM UTC: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  4|5
total_score: 20/70
a1cc629
Wed 24 Apr 2024 12:45:10 AM UTC: 
 hashmap.c | 21 +++------------------
 1 file changed, 3 insertions(+), 18 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:113:8: error: unused variable ‘posicion’ [-Werror=unused-variable]
  113 |   long posicion = hash(key, map->capacity);
      |        ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2e7f489
Wed 24 Apr 2024 12:45:33 AM UTC: 
 hashmap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  6|4
total_score: 30/70
3ebf33d
Wed 24 Apr 2024 12:51:46 AM UTC: 
 hashmap.c | 25 +++++++++++++------------
 1 file changed, 13 insertions(+), 12 deletions(-)
 tests:  6|4
total_score: 30/70
e0aaac8
